fixed whitespaces?

--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,14 @@ footer .links a:active {
     padding: 10px;
 }
 
+.content {
+    padding: 10px;
+}
+
+.content p {
+    margin-top: 10px;
+}
+
 #zodiac {
     max-width: 100vw;
     max-height: 95%;
